 ** Leader of the Pack should now be properly checked by the IncreasedCrit equivalency
 ** Fixed a major flaw with importing profiles from backup or from other profiles in the db
 ** (Condition THREATRAW): attempt to call global 'UnitDetailedThreatSituation' (a nil value)
 ** Fixed cooldown resetting with unitcooldown icons. Spells still not really updated for MoP
 
===v6.0.2===
 * Cooldown icons should now provide much better functionality when checking multiple spells. Single-spell functionality should (hopefully) remain unchanged.
 * Updated the name and description of the "Spell Cast Succeeded" Combat Event to reflect that it now only tracks instant cast spells.
 * Bug fixes:
 ** Bumped TellMeWhen_Options interface number
 ** Fixed warlock stance suggestions
 ** Removed paladin auras
 ** Fixed name coloring issue
 ** Fixed an error with range checking invalid spells
 ** Holy power limit increased to 5
 ** The "Show Variable text" setting should no longer cause errors
 ** Fixed the GCD spell for warriors (again)
 ** Fixed an issue with static formats and ptBR, zhCN, and zhTW.
 ** \Core\Conditions\Categories\BuffsDebuffs.lua:56 attempt to index global 'strlowerCache' (a nil value)
 
===v6.0.1===
 * Bug fix: Fixed positioning issues when using Masque.
 
===v6.0.0===
 * This is by and large the biggest update that TMW has ever seen. There were so many changes that I lost track of them. Here are a few:
 * Full support for Mists of Pandaria. If anything is missing, please open a ticket.
 
 * Almost everything in TMW is now modular. The most immediate effect of this is that the main tab in the icon editor is now divided into panels for each component that is contributing to an icon.
 * Implemented LibDogTag as the text manager for TMW instead of TMW's old (and very limited) system. You can now create text layouts that can be applied to an icon to dictate how the texts for that icon will be displayed.